tests/errors/e_notnone2.pyx
def eggs(int x not None, y not None):
	pass
_ERRORS = u"""
1:0: Only extension type arguments can have 'not None'
1:0: Only extension type arguments can have 'not None'
"""
